--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -1,10 +1,17 @@
 <template name='layout'>
   <div class='container'>
     <header>
-      {{> login}}
-      {{#if user}}
-        {{> avatarImage}}
-      {{/if}}
+      <header class='navbar navbar-default' role='navigation'>
+        <div class='navbar-header'>
+          <a class='navbar-brand' href='/'>Pear</a>
+        </div>
+        <div class='navbar-login'>
+          {{> login}}
+          {{#if user}}
+            {{> avatarImage}}
+          {{/if}}
+        </div>
+      </header>
     </header>
     <div id='main'>
       {{> yield}}
