--- a/client/views/people-list/peopleList.html
+++ b/client/views/people-list/peopleList.html
@@ -28,3 +28,10 @@
 		<input type="submit" value="Add">
 	</form>
 </template>
+
+<template name='peopleList'>
+  {{#if user}}
+    {{> addPersonForm}}
+  {{/if}}
+  {{> people}}
+</template>
