--- a/people-match.sass
+++ b/people-match.sass
@@ -2,21 +2,22 @@
 // Color Variables
 $purple: purple
 $red: red
+$green: green
+$lightGray : #d3d3d3
 
 // Location Variables
-$progressbar-color: $red
+
 
 .delete:hover
   color: red
   transition: color .5s
   cursor: pointer
 
-.login
- 	float: right
- 	margin-right: 200px
-
-// Progress bar overrides
+// Progress Bar
 // https://github.com/Multiply/iron-router-progress
+// 
+$progressbar-color: $red
+
 #iron-router-progress
   background-color : $progressbar-color
   box-shadow       : 0 0 3px $progressbar-color
@@ -26,5 +27,56 @@ $progressbar-color: $red
   width: 10px
   height: 10px
 
-.login-block
-  display: inline-block
+// Login Buttons
+
+.login
+ 	float: right
+ 	margin-right: 60px
+
+#login-buttons
+	margin-bottom: 10px
+
+	a
+		text-decoration: none
+	
+	#login-dropdown-list
+		top: 42px
+		left: -175px
+
+	.login-form-sign-in
+		margin-top: 20px
+
+.avatar
+	margin-top: 5px
+
+// Bootstrap Navbar
+//
+.navbar-nav
+	.login-block
+	  display: inline-block
+
+.navbar-thin-height
+	max-height: 60px
+
+.navbar-brand
+	padding: 0 15px
+
+.navbar-nav li
+	&.active
+		border-color: $red
+
+	a
+		border-bottom: 2px solid $lightGray
+		text-decoration: none
+
+	a:hover
+  	border-bottom: 2px solid $green
+
+.nav .open
+	> a, 
+	> a:hover,
+	> a:focus
+ 		border-color: $red 
+
+.dropdown-menu
+	padding: 5px 0 0 
