make consistent template helpers

--- a/client/views/nfl_players/nflPlayersList.html
+++ b/client/views/nfl_players/nflPlayersList.html
@@ -14,5 +14,5 @@
 </template>
 
 <template name="playerDescription">
-  <li>{{full_name}} - {{position}} - {{team}} - {{last_name}}</li>
+  <li>{{full_name}} - {{position}} - {{team}} - {{jersey_number}}</li>
 </template>
