--- a/client/views/nfl_players/nflPlayersList.html
+++ b/client/views/nfl_players/nflPlayersList.html
@@ -7,6 +7,7 @@
 
   <!-- Dropdown -->
   {{> positionDropdown}}
+  {{> teamDropdown}}
 
   <!-- List -->
   <h4>{{totalNflPlayersCount}} Total</h4>
@@ -32,6 +33,13 @@
 </template>
 
 <template name="playerDescriptionVisual">
-  <li><img class='player-img' src={{ playerImageSrc espn_id = this.espn_id espn_size = 'medium'}}>{{full_name}} - {{position}} - {{team}} - {{jersey_number}}</li>
+  <li><img class='player-img' src={{ playerImageESPNSrc espn_id = this.espn_id espn_size = 'medium'}}>{{full_name}} - {{position}} - {{team}} - {{jersey_number}}</li>
 </template>
 
+<template name='teamDropdown'>
+  <select id='teamDropdown'>
+    {{#each nflTeams}}
+      <option value={{this}}>{{this}}</option>
+    {{/each}}
+  </select>
+</template>
