add player cards with jersey styling

--- a/client/views/nfl_players/nflPlayersList.sass
+++ b/client/views/nfl_players/nflPlayersList.sass
@@ -1,5 +1,18 @@
 li.nflPlayer
+  font-family: 'jersey'
   list-style-type: none
   padding: 0
   margin: 0
-  font-family: 'jersey'
+  margin-bottom: 35px
+  position: relative
+  width: 100%
+
+  .photoCol
+    float: left
+    width: 300px
+
+  .cardLastName
+    font-size: 2.5em
+
+  .cardJerseyNumber
+    font-size: 8em
