--- a/client/views/nfl_players/nflPlayersList.html
+++ b/client/views/nfl_players/nflPlayersList.html
@@ -33,15 +33,28 @@
 
 <template name="playerCard">
   <li class='nflPlayer'>
-    <a href={{pathFor 'playerCardPage' }}>
-      <img class='player-img' src={{ playerImageESPN espn_id = this.espn_id espn_size = 'medium'}}>
-      {{> playerCardInfo}}
-    </a>
+    {{> playerCardPhoto}}
+    {{> playerCardInfoStyled}}
   </li>
 </template>
 
 <template name='playerCardInfo'>
   {{full_name}} - {{position}} - {{team}} - {{jersey_number}}
+</template>
+
+<template name='playerCardPhoto'>
+  <div class='photoCol'>
+    <a href={{pathFor 'playerCardPage' }}>
+      <img class='player-img' src={{ playerImageESPN espn_id = this.espn_id espn_size = 'medium'}}>
+    </a>
+  </div>
+</template>
+
+<template name='playerCardInfoStyled'>
+  <div class='infoCol'>
+    <div class='cardLastName'>{{last_name}}</div>
+    <div class='cardJerseyNumber'>{{jersey_number}}</div>
+  </div>
 </template>
 
 <template name='teamDropdown'>
