Border around Font Jersey Style italicize first name. Add in Position.

--- a/client/views/nfl_players/nflPlayersList.html
+++ b/client/views/nfl_players/nflPlayersList.html
@@ -52,8 +52,8 @@
 
 <template name='playerCardInfoStyled'>
   <div class='infoCol'>
-    <div class='cardLastName'>{{last_name}}</div>
-    <div class='cardJerseyNumber'>{{jersey_number}}</div>
+    <div><span class='cardLastName'>{{last_name}}</span>  <span class='cardFirstName'>{{first_name}}</span></div>
+    <div><span class='cardJerseyNumber'>{{jersey_number}}</span>  <span class='cardPosition'>{{position}}</span></div>
   </div>
 </template>
 
