--- a/client/views/nfl_players/nflPlayersList.sass
+++ b/client/views/nfl_players/nflPlayersList.sass
@@ -6,6 +6,7 @@ li.nflPlayer
   margin-bottom: 35px
   position: relative
   width: 100%
+  height: 210px
 
   .photoCol
     float: left
@@ -14,5 +15,14 @@ li.nflPlayer
   .cardLastName
     font-size: 2.5em
 
+  .cardFirstName
+    font-family: Calisto MT
+    font-size: 1em
+    font-style: italic
+
   .cardJerseyNumber
     font-size: 8em
+    -webkit-text-stroke: 3px red
+  
+  .cardPosition
+    font-size: 1.5em
