Photo Border radius

--- a/client/views/nfl_players/nflPlayersList.sass
+++ b/client/views/nfl_players/nflPlayersList.sass
@@ -11,6 +11,9 @@ li.nflPlayer
   .photoCol
     float: left
     width: 300px
+    
+    img.playerPhoto
+      border-radius: 30px
 
   .cardLastName
     font-size: 2.5em
