--- a/client/views/nfl_players/nflPlayersList.html
+++ b/client/views/nfl_players/nflPlayersList.html
@@ -45,7 +45,7 @@
 <template name='playerCardPhoto'>
   <div class='photoCol'>
     <a href={{pathFor 'playerCardPage' }}>
-      <img class='player-img' src={{ playerImageESPN espn_id = this.espn_id espn_size = 'medium'}}>
+      <img class='playerPhoto' src={{ playerImageESPN espn_id = this.espn_id espn_size = 'medium'}}>
     </a>
   </div>
 </template>
