Implement Search Bar Functionality This implements a search bar that with meteor-easy-search https://github.com/matteodem/meteor-easy-search/ displays the card template for the users above the current selection. Easy search allows for a lot of flexibility in terms of template reactivity when a search occurs. Search counts, finding out if a user is currently searching or finished are included. I could not find a way to style the searchbar in the way I wanted to easily, and it also uses a regular text box instead of a search box (so you miss -webkit features like the (x) button in the searchbar. However, this is a good first pass that implements search functionality across the `full_name` attribute of the NflPlayers collection.

--- a/client/views/nfl_players/nflPlayersList.html
+++ b/client/views/nfl_players/nflPlayersList.html
@@ -4,12 +4,17 @@
   {{> positionDropdown}}
   {{> teamDropdown}}
 
+  <!-- Search -->
+  {{> nflPlayerSearch}}
+
   <!-- List -->
   <h4>{{totalNflPlayersCount}} Total</h4>
   <h4>{{nflPositionCount}} Total</h4>
   <ul class='nflPlayersList'>
+    {{> nflPlayerSearchResults}}
+
     {{#each nflPlayers}}
-      {{>playerCard}}
+      {{> playerCard}}
     {{/each}}
   </ul>
 </template>
@@ -63,4 +68,22 @@
       <option value={{this}}>{{this}}</option>
     {{/each}}
   </select>
+</template>
+
+<template name="nflPlayerSearch">
+    {{> esInput index="nflPlayersSearch" placeholder="Search Player" class='nflPlayerSearchBar' type='Search'}}
+
+    {{#ifEsHasNoResults index="nflPlayersSearch"}}
+      <span class="searchNoResultsAlert">Whoops. This is not fantasy search.</span>
+    {{/ifEsHasNoResults}}
+</template>
+
+<template name='nflPlayerSearchResults'>
+  {{#esEach index="nflPlayersSearch"}}
+    {{> playerCard}}
+  {{/esEach}}
+
+  {{#if searchResultsExist}}
+    <div class='listDivider'></div>
+  {{/if}}
 </template>
