--- a/client/views/nfl_players/nflPlayersList.sass
+++ b/client/views/nfl_players/nflPlayersList.sass
@@ -11,7 +11,7 @@ li.nflPlayer
   .photoCol
     float: left
     width: 300px
-    
+
     img.playerPhoto
       border-radius: 30px
 
@@ -26,6 +26,16 @@ li.nflPlayer
   .cardJerseyNumber
     font-size: 8em
     -webkit-text-stroke: 3px red
-  
+
   .cardPosition
     font-size: 1.5em
+
+  .searchNoResultsAlert
+    font-style: italic
+
+.listDivider
+  border-top: 1px solid #eaeaea
+  clear: both
+  margin: 9px 0 0 0
+  padding: 10px 0 0 0
+  overflow: hidden
