HOTFIX: Color style and styling

--- a/client/views/nfl_players/nflTeam.sass
+++ b/client/views/nfl_players/nflTeam.sass
@@ -122,7 +122,7 @@ li.nflPlayer
 		&.Vikings
 			+jersey(white, $min-purple)
 		&.Texans
-			+jersey($hou-red, white)
+			+jersey($hou-blue, $hou-red)
 		&.Colts
 			+jersey(white, $ind-blue)
 		&.Titans
