Remove hardcoded team arrays, replace with NflTeam collection subscription

--- a/client/views/nfl_players/nflPlayersListDropdowns.html
+++ b/client/views/nfl_players/nflPlayersListDropdowns.html
@@ -9,7 +9,7 @@
 <template name='teamDropdown'>
   <select id='teamDropdown'>
     {{#each nflTeams}}
-      <option value={{this}}>{{this}}</option>
+      <option value={{this.team}}>{{this.team}}</option>
     {{/each}}
   </select>
 </template>
