add in Animations. TODO: side effect is img no longer links to <a> player page... dont know why.

--- a/client/views/common/common.html
+++ b/client/views/common/common.html
@@ -7,3 +7,13 @@
     <span>{{> avatar user=user type='circle'}}</span>
   {{/if}}
 </template>
+
+<template name='loading'>
+
+</template>
+
+<template name='fourOhFour'>
+	{{#with wackoForFlacco}}
+	  {{> playerCard}}
+  {{/with}}
+</template>
