--- a/client/views/nfl_players/nflPlayersList.sass
+++ b/client/views/nfl_players/nflPlayersList.sass
@@ -10,7 +10,8 @@ li.nflPlayer
 
   .photoCol
     float: left
-    width: 300px
+    width: 270px
+    height: 200px
 
     img.playerPhoto
       border-radius: 30px
