--- a/client/views/nfl_players/nflTeamColorSwatches.sass
+++ b/client/views/nfl_players/nflTeamColorSwatches.sass
@@ -56,6 +56,7 @@ $stl-blue: #13264B
 $stl-gold: #C9AF74
 $tb-red: #D60A0B
 $tb-copper: #89765F
+$tb-orange: #FF7A00
 $ten-blue-light: #648FCC
 $ten-blue-dark: #000080
 $ten-red: #FF0000
@@ -95,7 +96,7 @@ li.nflPlayer
 		&.Broncos
 			+jersey($den-blue, $den-orange)
 		&.Buccaneers
-			+jersey($tb-red, black)
+			+jersey($tb-red, $tb-orange)
 		&.Raiders
 			+jersey($oak-gray, black, 3.5px)
 		&.Chargers
