--- a/client/views/nfl_players/nflPlayersListCards.html
+++ b/client/views/nfl_players/nflPlayersListCards.html
@@ -20,14 +20,20 @@
 <template name='playerCardPhoto'>
   <div class='photoCol'>
     <a href={{pathFor 'playerCardPage' }}>
-      <img class='playerPhoto' src={{ playerImageESPN espn_id = this.espn_id espn_size = 'medium'}}>
+      <img class='playerPhoto animated fadeInDown' src={{ playerImageESPN espn_id = this.espn_id espn_size = 'medium'}}>
     </a>
   </div>
 </template>
 
 <template name='playerCardInfoStyled'>
-  <div class='infoCol'>
-    <div><span class='cardLastName'>{{last_name}}</span>  <span class='cardFirstName'>{{first_name}}</span></div>
-    <div><span class='cardJerseyNumber {{team}}'>{{jersey_number}}</span>  <span class='cardPosition'>{{position}}</span></div>
+  <div class='infoCol animated fadeInRight'>
+    <div>
+      <span class='cardLastName'>{{last_name}}</span>  
+      <span class='cardFirstName'>{{first_name}}</span>
+    </div>
+    <div>
+      <span class='cardJerseyNumber {{team}}'>{{jersey_number}}</span>
+      <span class='cardPosition'>{{position}}</span>
+    </div>
   </div>
 </template>
