wire up favorites with a timestamp!

--- a/client/templates/nfl_players/nflPlayersList.html
+++ b/client/templates/nfl_players/nflPlayersList.html
@@ -7,6 +7,9 @@
   <!-- Search -->
   {{> nflPlayerSearch}}
 
+  <!-- Superstars -->
+  {{> nflPlayersSuperstars}}
+
   <!-- Team Rollover -->
   <div class='listDivider'></div>
   {{> teamRollover}}
