--- a/client/templates/nfl_players/nflPlayersListCards.html
+++ b/client/templates/nfl_players/nflPlayersListCards.html
@@ -10,6 +10,7 @@
   <li class='nflPlayer'>
     {{> playerCardPhoto}}
     {{> playerCardInfoStyled}}
+    {{> playerSuperstar}}
   </li>
 </template>
 
@@ -28,7 +29,7 @@
 <template name='playerCardInfoStyled'>
   <div class='infoCol'>
     <div>
-      <span class='cardLastName'>{{last_name}}</span>  
+      <span class='cardLastName'>{{last_name}}</span>
       <span class='cardFirstName'>{{first_name}}</span>
     </div>
     <div>
@@ -36,4 +37,8 @@
       <span class='cardPosition'>{{position}}</span>
     </div>
   </div>
+</template>
+
+<template name='playerSuperstar'>
+  <div class ='superstar'>Superstar</div>
 </template>
