add in reactive mongo join! This adds in reywood:publish-composite package in order to join the superstar object to the NflPlayer object

--- a/client/templates/nfl_players/nflPlayersSuperstars.html
+++ b/client/templates/nfl_players/nflPlayersSuperstars.html
@@ -5,5 +5,5 @@
 </template>
 
 <template name='nflPlayersSuperstarCard'>
-  <li>{{createdAt}}</li>
+  <li><span>{{superstarPlayer.full_name}}</span><span>{{createdAt}}</span></li>
 </template>
