--- a/client/templates/layouts/layout.html
+++ b/client/templates/layouts/layout.html
@@ -35,7 +35,7 @@
         </ul>
       </div>
     </nav>
-    <div id='main'>
+    <div id='globalContainer'>
       {{> yield}}
     </div>
   </div>
