Style the Superstar Feed

--- a/client/templates/nfl_players/nflPlayersListCards.html
+++ b/client/templates/nfl_players/nflPlayersListCards.html
@@ -10,7 +10,7 @@
   <li class='nflPlayer'>
     {{> playerCardPhoto}}
     {{> playerCardInfoStyled}}
-    {{> playerSuperstar}}
+    {{> playerSuperstarMe}}
   </li>
 </template>
 
@@ -39,6 +39,6 @@
   </div>
 </template>
 
-<template name='playerSuperstar'>
+<template name='playerSuperstarMe'>
   <div class ='superstar'>Superstar</div>
 </template>
