--- a/client/templates/layouts/layout.html
+++ b/client/templates/layouts/layout.html
@@ -11,7 +11,7 @@
       <div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="{{pathFor 'people'}}">People</a></li>
-          <li><a href="{{pathFor 'nflPlayersList'}}">NFL</a></li>
+          <li><a href="{{pathFor 'nflPlayersListLayout'}}">NFL</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
