--- a/client/templates/nfl_players/nflPlayersSuperstars.sass
+++ b/client/templates/nfl_players/nflPlayersSuperstars.sass
@@ -3,19 +3,20 @@
 li.nflPlayer.superstarFeedCard
 	height: 50px
 	margin-bottom: 0
+	padding: 6px 8px 7px
+	border-top: 1px solid #eaeaea
 
 	.photoCol
 		width: 68px
 		height: 50px
-
+		
 		img.playerPhoto
-      border-radius: 5px
+			width: 68px
+			height: 50px
+      border-radius: 2px
 
 	.cardLastName
 		font-size: 1.5em
-
-	.cardPosition 
-		font-size: 1em
 
 	.timeAgo
 		font-family: Calisto MT
