--- a/client/templates/nfl_players/nflPlayersListLayout.html
+++ b/client/templates/nfl_players/nflPlayersListLayout.html
@@ -1,9 +1,9 @@
 <template name="nflPlayersListLayout">
   <div class='row'>
-    <div class='col-md-2'>
+    <div class='col-lg-2'>
       <div>USER HERE</div>      
     </div>
-    <div class='col-md-7'>
+    <div class='col-lg-6'>
       <!-- Filtering -->
       {{> positionDropdown}}
       {{> teamDropdown}}
@@ -18,7 +18,7 @@
       <!-- List -->
       {{> nflPlayersList}}
     </div>
-    <div class='col-md-3'>
+    <div class='col-lg-3'>
       <!-- Superstars -->
       {{> superstarsFeed}}
     </div>
