Style the Superstar list font down for better readability and cleanliness

--- a/client/templates/nfl_players/nflPlayersSuperstars.sass
+++ b/client/templates/nfl_players/nflPlayersSuperstars.sass
@@ -16,7 +16,9 @@ li.nflPlayer.superstarFeedCard
       border-radius: 2px
 
 	.cardLastName
-		font-size: 1.5em
+		letter-spacing: 1px
+		font-size: 1.3em
+		color: gray
 
 	.timeAgo
 		font-family: Calisto MT
