Style the Superstar list font down for better readability and cleanliness, actually committing now

--- a/client/templates/nfl_players/nflPlayersSuperstars.sass
+++ b/client/templates/nfl_players/nflPlayersSuperstars.sass
@@ -16,8 +16,8 @@ li.nflPlayer.superstarFeedCard
       border-radius: 2px
 
 	.cardLastName
-		letter-spacing: 1px
-		font-size: 1.3em
+		letter-spacing: 2px
+		font-size: .8em
 		color: gray
 
 	.timeAgo
