--- a/client/templates/nfl_players/nflPlayersList.sass
+++ b/client/templates/nfl_players/nflPlayersList.sass
@@ -26,7 +26,7 @@ li.nflPlayer
 
   .cardJerseyNumber
     font-size: 8em
-    -webkit-text-stroke: 3px red
+    -webkit-text-stroke: 3px red // default color
 
   .cardPosition
     font-size: 1.5em
