--- a/client/templates/nfl_players/nflPlayersListLayout.html
+++ b/client/templates/nfl_players/nflPlayersListLayout.html
@@ -1,9 +1,15 @@
 <template name="nflPlayersListLayout">
   <div class='row'>
+
     <div class='col-lg-2'>
       <div>USER HERE</div>      
     </div>
+
     <div class='col-lg-6'>
+
+      <!-- Commentary -->
+      {{> commentaryArea}}
+
       <!-- Filtering -->
       {{> positionDropdown}}
       {{> teamDropdown}}
@@ -17,10 +23,14 @@
 
       <!-- List -->
       {{> nflPlayersList}}
+
     </div>
+    
     <div class='col-lg-3'>
+
       <!-- Superstars -->
       {{> superstarsFeed}}
+
     </div>
   </div>
 </template>
