show latest commentaries

--- a/client/templates/nfl_players/nflPlayersListLayout.html
+++ b/client/templates/nfl_players/nflPlayersListLayout.html
@@ -9,7 +9,11 @@
 
       <!-- Commentary -->
       {{> commentaryArea}}
+      <div class='listDivider'></div>
 
+      {{> commentaryList}}      
+
+      <!-- NFL Players -->
       <!-- Filtering -->
       {{> positionDropdown}}
       {{> teamDropdown}}
@@ -17,7 +21,7 @@
       <!-- Search -->
       {{> nflPlayerSearch}}
 
-      <!-- Team Rollover -->
+      <!-- Team Selection Rollover -->
       <div class='listDivider'></div>
       {{> teamRollover}}
 
