Feature: Add Commentaries to Users

--- a/client/templates/commentaryModule/commentaries.sass
+++ b/client/templates/commentaryModule/commentaries.sass
@@ -1,8 +1,31 @@
-#commentary
-	width: 85%
+$space-gray: #8899a6
 
-#submit
-	width: 10%
+#commentary
+	width: 80%
 
 .commentaryCard
-	list-style-type: none
+	display: flex
+	flex-direction: row
+	height: 100px
+
+	.commentaryCardCol
+		display: inline-block
+
+		&.commentaryCardAvatar
+			width: 40px
+			margin: 5px
+
+		&.commentaryCardContent
+			width: 100%
+			margin: 5px
+
+			.userName
+				font-weight: bold
+
+			.time		
+				font-style: italic
+				font-size: .75em
+				color: $space-gray
+
+			.commentary
+				margin-top: 6px
