--- a/client/templates/commentaryModule/commentaryForm.html
+++ b/client/templates/commentaryModule/commentaryForm.html
@@ -1,10 +1,12 @@
 <template name='commentaryArea'>
   <form id="commentaryArea" class="form">
     <div class="form-group">
-      <div class="controls">
+      <span>
         <textarea id="commentary" type="text" value="" placeholder={{ placeholderText }} class="form-control"></textarea>
+      </span>
+      <span>
         <input id="submit" type="submit" value="Submit" class="btn btn-primary"/>
-      </div>
+      </span>
     </div>
   </form>
 </template>
