remove People, create new Routes based on names

--- a/client/templates/commentaryModule/commentaries.sass
+++ b/client/templates/commentaryModule/commentaries.sass
@@ -3,6 +3,10 @@ $space-gray: #8899a6
 #commentary
 	width: 80%
 
+#commentaryArea
+	#commentarySubmit
+		margin-top: 4px
+		
 .commentaryCard
 	display: flex
 	flex-direction: row
