--- a/client/templates/commentaryModule/commentaryForm.html
+++ b/client/templates/commentaryModule/commentaryForm.html
@@ -4,7 +4,7 @@
       <span>
         <textarea id="commentary" type="text" value="" placeholder={{ placeholderText }} class="form-control"></textarea>
       </span>
-      <span>
+      <span id='commentarySubmit'>
         <input id="submit" type="submit" value="Submit" class="btn btn-primary"/>
       </span>
     </div>
