--- a/client/templates/layouts/navLayout/navLayout.html
+++ b/client/templates/layouts/navLayout/navLayout.html
@@ -1,8 +1,8 @@
-<template name='layout'>
+<template name='navLayout'>
   <div class='container-fluid'>
     <nav class="navbar navbar-default navbar-thin-height" role="navigation">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{{pathFor 'peopleList'}}">
+        <a class="navbar-brand" href="{{pathFor 'chatterLayout'}}">
           <img src='https://lh4.googleusercontent.com/-yOoKXdob9y8/AAAAAAAAAAI/AAAAAAACF4w/C06HC1KF15w/s46-c-k-no/photo.jpg'>
         </a>
       </div>
@@ -10,16 +10,14 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="{{pathFor 'people'}}">People</a></li>
-          <li><a href="{{pathFor 'nflPlayersListLayout'}}">NFL</a></li>
+          <li class="active"><a href="{{pathFor 'chatterLayout' }}">Chatter</a></li>
+          <li><a href="{{pathFor 'nflPlayersListLayout'}}">Players</a></li>
+          <li><a href="#">Schedule</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="#">Videos</a></li>
+              <li><a href="#">Gameday</a></li>
             </ul>
           </li>
         </ul>
