--- a/client/templates/layouts/nflPlayersList/nflPlayersListLayout.html
+++ b/client/templates/layouts/nflPlayersList/nflPlayersListLayout.html
@@ -2,17 +2,10 @@
   <div class='row'>
 
     <div class='col-lg-2'>
-      <div>USER HERE</div>      
+      {{> avatarImage }}
     </div>
 
     <div class='col-lg-6'>
-
-      <!-- Commentary -->
-      {{> commentaryArea}}
-      <div class='listDivider'></div>
-
-      {{> commentaryList}}      
-
       <!-- NFL Players -->
       <!-- Filtering -->
       {{> positionDropdown}}
@@ -23,13 +16,13 @@
 
       <!-- Team Selection Rollover -->
       <div class='listDivider'></div>
-      {{> teamRollover}}
+      {{> teamSelect}}
 
       <!-- List -->
       {{> nflPlayersList}}
 
     </div>
-    
+
     <div class='col-lg-3'>
 
       <!-- Superstars -->
