--- a/client/templates/layouts/navLayout/navLayout.html
+++ b/client/templates/layouts/navLayout/navLayout.html
@@ -10,8 +10,8 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="{{pathFor 'chatterLayout' }}">Chatter</a></li>
-          <li><a href="{{pathFor 'nflPlayersListLayout'}}">Players</a></li>
+          <li class="{{ isActiveRoute regex='chatterLayout' }}"><a href="{{pathFor 'chatterLayout' }}">Chatter</a></li>
+          <li class="{{ isActiveRoute regex='nflPlayersListLayout' }}"><a href="{{pathFor 'nflPlayersListLayout'}}">Players</a></li>
           <li><a href="#">Schedule</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
