Add Lobby Page to the app -Adds Lobby to the Top Nav -Adds lobby page layout with filters -Adds Bootstrap 24-column layout and start of css helpers

--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -44,6 +44,9 @@ $progressbar-color: $red
 
 // Bootstrap Navbar
 //
+.container-fluid
+  padding: 0
+
 .navbar-nav
   .login-block
     display: inline-block
@@ -75,3 +78,7 @@ $progressbar-color: $red
 
 .dropdown-menu
   padding: 5px 0 0
+
+#globalContainer
+  width: 1170px
+  margin: auto
