--- a/client/templates/layouts/navLayout/navLayout.html
+++ b/client/templates/layouts/navLayout/navLayout.html
@@ -2,16 +2,17 @@
   <div class='container-fluid'>
     <nav class="navbar navbar-default navbar-thin-height" role="navigation">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{{pathFor 'chatterLayout'}}">
-          <img src='https://lh4.googleusercontent.com/-yOoKXdob9y8/AAAAAAAAAAI/AAAAAAACF4w/C06HC1KF15w/s46-c-k-no/photo.jpg'>
+        <a class="navbar-brand" href="{{ pathFor 'lobbyLayout' }}">
+          <img src='https://dm63aeeijtc75.cloudfront.net/app/images/victivLogo_notext.png'>
         </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div>
         <ul class="nav navbar-nav">
-          <li class="{{ isActiveRoute regex='chatterLayout' }}"><a href="{{pathFor 'chatterLayout' }}">Chatter</a></li>
-          <li class="{{ isActiveRoute regex='nflPlayersListLayout' }}"><a href="{{pathFor 'nflPlayersListLayout'}}">Players</a></li>
+          <li class="{{ isActiveRoute regex='lobbyLayout' }}"><a href="{{ pathFor 'lobbyLayout' }}">Lobby</a></li>
+          <li class="{{ isActiveRoute regex='chatterLayout' }}"><a href="{{ pathFor 'chatterLayout' }}">Chatter</a></li>
+          <li class="{{ isActiveRoute regex='nflPlayersListLayout' }}"><a href="{{ pathFor 'nflPlayersListLayout' }}">Players</a></li>
           <li><a href="#">Schedule</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
@@ -33,7 +34,7 @@
         </ul>
       </div>
     </nav>
-    <div id='globalContainer'>
+    <div id='globalContainer' class='row'>
       {{> yield}}
     </div>
   </div>
