--- a/client/templates/lobby/contestFilterContainer.html
+++ b/client/templates/lobby/contestFilterContainer.html
@@ -1,11 +1,11 @@
 <template name='contestFilterContainer'>
   <div id='contestFilterContainer' class='col-xs-24'>
     <div class='contestFilter'>
-      <div class='row'>
-        <div class='col-xs-8'>
+      <div class='row headspace-50 greyBg'>
+        <div class='col-xs-8 rBorder primaryBorderColor solidBorder'>
           <div class='row contestFilterRow'>
-            <div class='col-xs-7 verticallyAlign'><h5>SPORT</h5></div>
-            <div class='col-xs-16 verticallyAlign'>
+            <div class='col-xs-7 vAlign'><h5 class='whiteText'>SPORT</h5></div>
+            <div class='col-xs-16 vAlign'>
               <div class='row'>
                 <div class='col-xs-24'>ALL</div>
               </div>
@@ -17,16 +17,15 @@
             </div>
           </div>
         </div>
-        <div class='col-xs-8'>
+        <div class='col-xs-8 rBorder primaryBorderColor solidBorder'>
           <div class='row contestFilterRow'>
-            <div class='col-xs-7 verticallyAlign'><h5>BUY-IN</h5></div>
+            <div class='col-xs-7 vAlign'><h5 class='whiteText'>BUY-IN</h5></div>
           </div>
         </div>
         <div class='col-xs-8'>
           <div class='row contestFilterRow'>
-            <div class='col-xs-7 verticallyAlign'><h5>MAX PLAYERS</h5></div>
-            <div class='col-xs-16 verticallyAlign'>
-
+            <div class='col-xs-7 vAlign'><h5 class='whiteText'>MAX PLAYERS</h5></div>
+            <div class='col-xs-16 vAlign'>
             </div>
           </div>
         </div>
