Add Lobby Room with fixture room data

--- a/client/templates/lobby/contestFilterContainer.html
+++ b/client/templates/lobby/contestFilterContainer.html
@@ -4,7 +4,7 @@
       <div class='row headspace-50 greyBg'>
         <div class='col-xs-8 rBorder primaryBorderColor solidBorder'>
           <div class='row contestFilterRow'>
-            <div class='col-xs-7 vAlign'><h5 class='whiteText'>SPORT</h5></div>
+            <div class='col-xs-7 vAlign'><h5 class='center whiteText'>SPORT</h5></div>
             <div class='col-xs-16 vAlign'>
               <div class='row'>
                 <div class='col-xs-24'>ALL</div>
@@ -19,12 +19,12 @@
         </div>
         <div class='col-xs-8 rBorder primaryBorderColor solidBorder'>
           <div class='row contestFilterRow'>
-            <div class='col-xs-7 vAlign'><h5 class='whiteText'>BUY-IN</h5></div>
+            <div class='col-xs-7 vAlign'><h5 class='center whiteText'>BUY-IN</h5></div>
           </div>
         </div>
         <div class='col-xs-8'>
           <div class='row contestFilterRow'>
-            <div class='col-xs-7 vAlign'><h5 class='whiteText'>MAX PLAYERS</h5></div>
+            <div class='col-xs-7 vAlign'><h5 class='center whiteText'>MAX PLAYERS</h5></div>
             <div class='col-xs-16 vAlign'>
             </div>
           </div>
