--- a/client/templates/lobby/lobby.sass
+++ b/client/templates/lobby/lobby.sass
@@ -1,3 +1,6 @@
 .contestFilterRow
   height: 90px
   font-size: 12px
+
+#contestResultsTable
+  height: 500px // set a fixed height so the custom scrollbar takes effect
