--- a/client/lib/stylesheets/helper.css
+++ b/client/lib/stylesheets/helper.css
@@ -27,6 +27,57 @@
     color: #FFF
 }
 
+.sysDefaultText {
+    color: #000
+}
+
+.sysSecondaryText {
+    color: #999
+}
+
+.sysTableText {
+    color: #515151
+}
+
+.sysSuccessText {
+    color: #7CDFA4
+}
+
+.sysErrorText {
+    color: #ff8593
+}
+
+.sysLabelText {
+    color: black
+}
+
+.sysGreenText {
+    color: #7CDFA4
+}
+
+.sysRedText {
+    color: #ff8593
+}
+
+.size-9 {
+    font-size: 9px;
+    letter-spacing: .5px;
+    font-weight: 400
+}
+
+.size-10 {
+    font-size: 10px;
+    letter-spacing: .5px
+}
+
+.size-12 {
+    font-size: 12px;
+    letter-spacing: .5px
+}
+
+.size-16 {
+    font-size: 16px
+}
 
 /*BORDERS*/
 .fullBorder {
