--- a/client/templates/lobby/contestResultsContainer.jade
+++ b/client/templates/lobby/contestResultsContainer.jade
@@ -1,4 +1,20 @@
 template(name="contestResultsContainer")
-  div(id="contestResultsContainer")
+  div(id="contestResultsContainer" class='col-xs-24')
     div(class="row")
-      div(id='contestResultsTableContainer')
+      div(id='contestResultsTableContainer' class='col-xs-24')
+        div(id='contestResultsTableHeader' class='row sysLabelText paddingTB-10 size-12')
+          div(class='col-xs-7') Contest
+          div(class='col-xs-2') Entries
+          div(class='col-xs-2') Size
+          div(class='col-xs-2') Entry
+          div(class='col-xs-2') Prizes
+          div(class='col-xs-4') Starts (ET)
+        div(class='row')
+          div(id='contestResultsTable')
+            each contests
+              div(class='col-xs-7') #{contestName}
+              div(class='col-xs-2') #{entries}
+              div(class='col-xs-2') #{size}
+              div(class='col-xs-2') $#{entryFee}
+              div(class='col-xs-2') $#{prizes}
+              div(class='col-xs-4') {{momentify starts}}
